--- a/Part4-tree_based_models/DAT158-Part4-1-Decision_Trees.ipynb
+++ b/Part4-tree_based_models/DAT158-Part4-1-Decision_Trees.ipynb
@@ -713,10 +713,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Root node**: The top-most node. Where you start.\n",
+    "- **Root node**: The top-most node. No parent node. Where you start. Poses the first if-else question.\n",
     "\n",
     "\n",
-    "- **Leaf node**: A node without children. Not possible to go any further. A bottom node.\n",
+    "- **Internal node**: Has one parent node and two children. These nodes pose if-else questions.\n",
+    "\n",
+    "\n",
+    "- **Leaf node**: A node without children. Not possible to go any further. A bottom node. These nodes provide predictions.\n",
     "\n",
     "\n",
     "- **`samples`**: The number of training samples that the node applies to. The number of training instances that end up passing through the node. E.g. there are 179 samples for which the glucose is less than 154.5\n",
@@ -918,9 +921,7 @@
    "source": [
     "Decision trees learn the relationship between the training data and the corresponding labels by organizing the training data in a binary tree. Each leaf in the tree makes a specific prediction. Each internal node compares a single feature value agains a single threshold, and places instances in their corresponding child nodes. \n",
     "\n",
-    "Training a decision tree is done roughly as follows (we'll study training more carefully below): Starting at the root node, the data is split into two parts based on the feature that has the larges **information gain**. This is repeated for each child of the node, and so on in an iterative way.\n",
-    "\n",
-    "This stops when you reach a node that is **pure**: all samples ending up at the node belongs to the same class. "
+    "Training a decision tree is done recursively, roughly as follows (we'll study training more carefully below): The goal is to obtain leaves that are as pure as possible, with the maximum amount of samples belonging to the same class. Starting at the root node, the data is split into two parts based on the feature that has the larges **information gain**. This is repeated for each child of the node, and so on in an iterative way.\n"
    ]
   },
   {
@@ -1112,9 +1113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In other words, if we write $k$ for class and $t_k$ for threshold, the cost function that CART tries to minimize is **the node impurity**:\n",
+    "In other words, if we write $f$ for feature and $t_k$ for threshold, the cost function that CART tries to minimize is **the node impurity**:\n",
     "\n",
-    "$$J(k, t_k) = \\frac{m_{\\mbox{left}}}{m} G_{\\mbox{left}} + \\frac{m_{\\mbox{right}}}{m} G_{\\mbox{right}}, $$\n",
+    "$$J(f, t_k) = \\frac{m_{\\mbox{left}}}{m} G_{\\mbox{left}} + \\frac{m_{\\mbox{right}}}{m} G_{\\mbox{right}}, $$\n",
     "\n",
     "where $m$ is the total number of samples in the node and $m_{\\mbox{left}}$, $m_{\\mbox{right}}$ the number of samples in the left and right child. "
    ]
@@ -1141,10 +1142,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -1193,6 +1192,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **Your turn!**\n",
+    "- Train a decision tree classifier on the breast cancer wisconsin dataset (`sklearn.datasets.load_breast_cancer`), with `max-depth` set to 3 or 4.\n",
+    "- Test it on a test set (which one's better, `max_depth` 3 or 4?)\n",
+    "- Plot the decision tree.\n",
+    "\n",
+    "\n",
+    "**Extra resources:**\n",
     "> Scikit-learns documentation for decision trees is very useful. You should have a look: http://scikit-learn.org/stable/modules/tree.html.\n",
     "\n",
     "> `dtreeeviz` is a nice library for visualizing decision trees: http://explained.ai/decision-tree-viz"
