--- a/Part4-tree_based_models/DAT158-Part4-2-Random_Forests.ipynb
+++ b/Part4-tree_based_models/DAT158-Part4-2-Random_Forests.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Work in progress**. \n",
-    "\n",
-    "Version October 18th, 2018"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Alexander S. Lundervold, October 18th, 2018"
+    "Alexander S. Lundervold, October 22nd, 2018"
    ]
   },
   {
@@ -2310,7 +2301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can predict who will get a second date with more than 85% accuracy!"
+    "We can predict who will get a second date with more than 86% accuracy!"
    ]
   },
   {
@@ -2683,6 +2674,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Below code taken from Part 2*:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
@@ -2917,18 +2915,11 @@
       "\n",
       " Directory of C:\\Users\\alexa\\Dropbox\\Jobb\\HIB\\Kurs\\DAT158\\DAT158ML\\Part4-tree_based_models\\data\n",
       "\n",
-      "10/19/2018  09:28 AM    <DIR>          .\n",
-      "10/19/2018  09:28 AM    <DIR>          ..\n",
-      "10/19/2018  09:28 AM            16,557 2015.csv\n",
-      "10/19/2018  09:28 AM            17,132 2016.csv\n",
-      "10/19/2018  09:28 AM            29,536 2017.csv\n",
-      "10/19/2018  09:21 AM            25,822 diabetes.csv\n",
-      "10/19/2018  09:28 AM        26,222,239 human-activity-recognition-with-smartphones.zip\n",
-      "10/19/2018  09:28 AM        19,324,796 test.csv\n",
-      "10/19/2018  09:28 AM        48,138,764 train.csv\n",
-      "10/19/2018  09:28 AM            29,425 world-happiness.zip\n",
-      "               8 File(s)     93,804,271 bytes\n",
-      "               2 Dir(s)  752,990,834,688 bytes free\n"
+      "10/22/2018  11:23 AM    <DIR>          .\n",
+      "10/22/2018  11:23 AM    <DIR>          ..\n",
+      "10/22/2018  11:23 AM            29,425 world-happiness.zip\n",
+      "               1 File(s)         29,425 bytes\n",
+      "               2 Dir(s)  740,294,270,976 bytes free\n"
      ]
     }
    ],
@@ -2976,18 +2967,14 @@
       "\n",
       " Directory of C:\\Users\\alexa\\Dropbox\\Jobb\\HIB\\Kurs\\DAT158\\DAT158ML\\Part4-tree_based_models\\data\n",
       "\n",
-      "10/19/2018  09:28 AM    <DIR>          .\n",
-      "10/19/2018  09:28 AM    <DIR>          ..\n",
-      "10/19/2018  09:49 AM            16,557 2015.csv\n",
-      "10/19/2018  09:49 AM            17,132 2016.csv\n",
-      "10/19/2018  09:49 AM            29,536 2017.csv\n",
-      "10/19/2018  09:21 AM            25,822 diabetes.csv\n",
-      "10/19/2018  09:28 AM        26,222,239 human-activity-recognition-with-smartphones.zip\n",
-      "10/19/2018  09:28 AM        19,324,796 test.csv\n",
-      "10/19/2018  09:28 AM        48,138,764 train.csv\n",
-      "10/19/2018  09:28 AM            29,425 world-happiness.zip\n",
-      "               8 File(s)     93,804,271 bytes\n",
-      "               2 Dir(s)  752,990,830,592 bytes free\n"
+      "10/22/2018  11:23 AM    <DIR>          .\n",
+      "10/22/2018  11:23 AM    <DIR>          ..\n",
+      "10/22/2018  11:23 AM            16,557 2015.csv\n",
+      "10/22/2018  11:23 AM            17,132 2016.csv\n",
+      "10/22/2018  11:23 AM            29,536 2017.csv\n",
+      "10/22/2018  11:23 AM            29,425 world-happiness.zip\n",
+      "               4 File(s)         92,650 bytes\n",
+      "               2 Dir(s)  740,294,262,784 bytes free\n"
      ]
     }
    ],
@@ -4374,7 +4361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***To be added***"
+    "*See the notebook on hyperparameter tuning for random forests and XGBoost in the DAT158ML-repository*"
    ]
   },
   {
@@ -5111,7 +5098,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our model is off by 6.4 years on average. We'll try to improve the model below, but first, let's look at the feature importances. Which features are most predictive for life expectancy in our model?"
+    "Our model is off by 6.4 years on average. There are many things you could do to try to improve the model. Feel free to experiment! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at the feature importances. Which features are most predictive for life expectancy in our model?"
    ]
   },
   {
@@ -5340,18 +5334,15 @@
       "\n",
       " Directory of C:\\Users\\alexa\\Dropbox\\Jobb\\HIB\\Kurs\\DAT158\\DAT158ML\\Part4-tree_based_models\\data\n",
       "\n",
-      "10/19/2018  09:28 AM    <DIR>          .\n",
-      "10/19/2018  09:28 AM    <DIR>          ..\n",
-      "10/19/2018  09:49 AM            16,557 2015.csv\n",
-      "10/19/2018  09:49 AM            17,132 2016.csv\n",
-      "10/19/2018  09:49 AM            29,536 2017.csv\n",
-      "10/19/2018  09:21 AM            25,822 diabetes.csv\n",
-      "10/19/2018  09:28 AM        26,222,239 human-activity-recognition-with-smartphones.zip\n",
-      "10/19/2018  09:28 AM        19,324,796 test.csv\n",
-      "10/19/2018  09:28 AM        48,138,764 train.csv\n",
-      "10/19/2018  09:28 AM            29,425 world-happiness.zip\n",
-      "               8 File(s)     93,804,271 bytes\n",
-      "               2 Dir(s)  752,992,002,048 bytes free\n"
+      "10/22/2018  11:25 AM    <DIR>          .\n",
+      "10/22/2018  11:25 AM    <DIR>          ..\n",
+      "10/22/2018  11:23 AM            16,557 2015.csv\n",
+      "10/22/2018  11:23 AM            17,132 2016.csv\n",
+      "10/22/2018  11:23 AM            29,536 2017.csv\n",
+      "10/22/2018  11:25 AM        26,222,239 human-activity-recognition-with-smartphones.zip\n",
+      "10/22/2018  11:23 AM            29,425 world-happiness.zip\n",
+      "               5 File(s)     26,314,889 bytes\n",
+      "               2 Dir(s)  740,265,693,184 bytes free\n"
      ]
     }
    ],
@@ -5400,18 +5391,17 @@
       "\n",
       " Directory of C:\\Users\\alexa\\Dropbox\\Jobb\\HIB\\Kurs\\DAT158\\DAT158ML\\Part4-tree_based_models\\data\n",
       "\n",
-      "10/19/2018  09:28 AM    <DIR>          .\n",
-      "10/19/2018  09:28 AM    <DIR>          ..\n",
-      "10/19/2018  09:49 AM            16,557 2015.csv\n",
-      "10/19/2018  09:49 AM            17,132 2016.csv\n",
-      "10/19/2018  09:49 AM            29,536 2017.csv\n",
-      "10/19/2018  09:21 AM            25,822 diabetes.csv\n",
-      "10/19/2018  09:28 AM        26,222,239 human-activity-recognition-with-smartphones.zip\n",
-      "10/19/2018  09:49 AM        19,324,796 test.csv\n",
-      "10/19/2018  09:49 AM        48,138,764 train.csv\n",
-      "10/19/2018  09:28 AM            29,425 world-happiness.zip\n",
-      "               8 File(s)     93,804,271 bytes\n",
-      "               2 Dir(s)  752,992,006,144 bytes free\n"
+      "10/22/2018  11:25 AM    <DIR>          .\n",
+      "10/22/2018  11:25 AM    <DIR>          ..\n",
+      "10/22/2018  11:25 AM            16,557 2015.csv\n",
+      "10/22/2018  11:25 AM            17,132 2016.csv\n",
+      "10/22/2018  11:25 AM            29,536 2017.csv\n",
+      "10/22/2018  11:25 AM        26,222,239 human-activity-recognition-with-smartphones.zip\n",
+      "10/22/2018  11:25 AM        19,324,796 test.csv\n",
+      "10/22/2018  11:25 AM        48,138,764 train.csv\n",
+      "10/22/2018  11:23 AM            29,425 world-happiness.zip\n",
+      "               7 File(s)     93,778,449 bytes\n",
+      "               2 Dir(s)  740,198,223,872 bytes free\n"
      ]
     }
    ],
@@ -6266,7 +6256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll try harder later, including fixing the overfitting issue. But first, let's look at what the trained model can tell us about our data."
+    "Feel free to try harder! Including tuning hyperparameters and fixing the overfitting issue. But first, let's look at what the trained model can tell us about our data."
    ]
   },
   {
