--- a/Part4-tree_based_models/DAT158-Part4-2-Random_Forests.ipynb
+++ b/Part4-tree_based_models/DAT158-Part4-2-Random_Forests.ipynb
@@ -6152,7 +6152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification"
+    "## Classification"
    ]
   },
   {
@@ -6263,7 +6263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature importances"
+    "### Feature importances"
    ]
   },
   {
