--- a/Part4-tree_based_models/DAT158-Part4-1-Decision_Trees.ipynb
+++ b/Part4-tree_based_models/DAT158-Part4-1-Decision_Trees.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alexander S. Lundervold, October 19th, 2018"
+    "Alexander S. Lundervold, October 22nd, 2018"
    ]
   },
   {
@@ -150,7 +150,7 @@
     {
      "data": {
       "text/plain": [
-       "('data/diabetes.csv', <http.client.HTTPMessage at 0x21f5b1b52e8>)"
+       "('data/diabetes.csv', <http.client.HTTPMessage at 0x2154e642160>)"
       ]
      },
      "execution_count": 5,
@@ -1509,7 +1509,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4386b7dd49d3419aa281d70e0b39b9d1",
+       "model_id": "9166dda960c5498f881bafa653f7327a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1994,7 +1994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cost function:\n",
+    "The cost function becomes:\n",
     "\n",
     "$$J(f, t_k) = \\frac{m_{\\mbox{left}}}{m} \\mbox{MSE}_{\\mbox{left}} + \\frac{m_{\\mbox{right}}}{m} \\mbox{MSE}_{\\mbox{right}}$$"
    ]
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2220,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2254,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2379,7 +2379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2636,7 +2636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2646,7 +2646,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 65,
      "metadata": {
       "image/png": {
        "width": "90%"
@@ -2661,7 +2661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2671,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 66,
      "metadata": {
       "image/png": {
        "width": "90%"
@@ -2686,7 +2686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2696,7 +2696,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 67,
      "metadata": {
       "image/png": {
        "width": "90%"
@@ -2745,7 +2745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2755,7 +2755,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 68,
      "metadata": {
       "image/png": {
        "width": "100%"
