--- a/Part4-tree_based_models/DAT158-Part4-2-Random_Forests.ipynb
+++ b/Part4-tree_based_models/DAT158-Part4-2-Random_Forests.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "*Ensembling* is a general technique for combining machine learning models to make even more powerful models. \n",
     "\n",
-    "There are several variants of this, as we'll see. **Voting**, **bagging**, **boosting**, **stacking**. We'll meet these concepts as we go along. You should also read through chapter 7 of the textbook as we won't cover all the details."
+    "There are several variants of this, as we'll see. **Voting**, **bagging**, **boosting**, **stacking**. We'll meet these concepts as we go along, but we won't go into detail on ensembling in general. **You should read through chapter 7 of the textbook**."
    ]
   },
   {
@@ -122,7 +122,7 @@
    "source": [
     "As we've seen, single decision trees tend to be very sensitive to the exact training data it's fed, and also tend to overfit. \n",
     "\n",
-    "By training multiple decision trees on different parts of the training data, each one may overfit and be very sensitive, but by *averaging* their predicions the sensitivity is reduced and the overfitting combatted. "
+    "By training multiple decision trees on different parts of the training data, each one may overfit and be very sensitive, but by *averaging* their predictions, the sensitivity is reduced and the overfitting combatted. "
    ]
   },
   {
@@ -193,7 +193,7 @@
    "source": [
     "Let's try it out on a couple of (slightly complicated) data sets. \n",
     "\n",
-    "> **Note:** We will not do a whole lot of data preparation or feature engineering. We'll also not investigate the data sets very thoroughly. Feel free to add more details to the stories told below (following the steps in Assignemnt 1, for example). "
+    "> **Note:** We will not do much data preparation or feature engineering. We'll also not investigate the data sets very thoroughly. Feel free to add more details to the stories told below (following the steps in Assignemnt 1, for example). "
    ]
   },
   {
@@ -4354,14 +4354,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Improving our results by understanding and tuning the hyperparameters"
+    "# Improving our results by tuning hyperparameters"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*See the notebook on hyperparameter tuning for random forests and XGBoost in the DAT158ML-repository*"
+    "*See the notebook on hyperparameter tuning for random forests and XGBoost in the DAT158ML-repository: `DAT158 - Extra - 1 - Hyperparameter optimization.ipynb`*"
    ]
   },
   {
