message about xgboost

--- a/Extra/DAT158 - Extra - 1 - Hyperparameter optimization.ipynb
+++ b/Extra/DAT158 - Extra - 1 - Hyperparameter optimization.ipynb
@@ -1224,6 +1224,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**We'll study hyperparameter optimization for XGBoost in a separate notebook in Part 4 of the course**. As you'll see, we can do better than what's below. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -1738,26 +1745,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rs_xgb = RandomizedSearchCV(xgb, xgb_param_grid, n_iter=100, n_jobs=-1, verbose=2)"
+    "rs_xgb = RandomizedSearchCV(xgb, xgb_param_grid, n_iter=30, cv=2, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rs_xgb.fit(X_train, y_train)"
    ]
@@ -1770,6 +1769,13 @@
    "source": [
     "rs_xgb.score(X_test, y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
