--- a/Part4-tree_based_models/DAT158-Part4-2-Random_Forests.ipynb
+++ b/Part4-tree_based_models/DAT158-Part4-2-Random_Forests.ipynb
@@ -2945,7 +2945,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's study happiness! Can we predict how happy the population of a country is? "
+    "Happiness! Can we predict how happy the population of a country is? "
    ]
   },
   {
@@ -2991,7 +2991,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we need to decide where to store the data. Any time you work with paths in Python you should consider <a href=\"https://docs.python.org/3.6/library/pathlib.html\">pathlib</a>. It's super convenient. "
+    "First we need to decide where to store the data. Any time you work with paths in Python you should consider <a href=\"https://docs.python.org/3.6/library/pathlib.html\">pathlib</a>. It's a super convenient, object-oriented way to work with paths in Python."
    ]
   },
   {
@@ -4552,7 +4552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*See the notebook on hyperparameter tuning for random forests and XGBoost in the DAT158ML-repository: `DAT158 - Extra - 1 - Hyperparameter optimization.ipynb`*"
+    "*See the notebook on hyperparameter tuning for random forests in the DAT158ML-repository: `DAT158 - Extra - 1 - Hyperparameter optimization.ipynb`*"
    ]
   },
   {
