--- a/Part4-tree_based_models/DAT158-Part4-3-Gradient_Boosting.ipynb
+++ b/Part4-tree_based_models/DAT158-Part4-3-Gradient_Boosting.ipynb
@@ -663,14 +663,14 @@
     "- http://blog.kaggle.com/2017/01/23/a-kaggle-master-explains-gradient-boosting\n",
     "- https://xgboost.readthedocs.io/en/latest/tutorials/model.html\n",
     "- https://www.analyticsvidhya.com/blog/2018/09/an-end-to-end-guide-to-understand-the-math-behind-xgboost\n",
-    "- https://campus.datacamp.com/courses/extreme-gradient-boosting-with-xgboost/classification-with-xgboost?ex=1"
+    "- https://campus.datacamp.com/courses/extreme-gradient-boosting-with-xgboost/classification-with-xgboost"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MUCH MORE CONTENT TO BE ADDED"
+    "# MORE CONTENT TO BE ADDED"
    ]
   },
   {
@@ -686,7 +686,7 @@
    "source": [
     "> Go back to the beginning of the course and use XGBoost on all the data sets we've studied, including the housing data from Assignment 1. You'll see that after some hyperparameter tuning, XGBoost will typically outperform all other models we've studied. This is typical. XGBoost is often the best, **except for images** where deep neural networks outperforms them handily. \n",
     "\n",
-    "We'll study deep neural networks next, in Part 5 of the course."
+    "We'll study deep neural networks next, in Part 5, the last part of the course."
    ]
   }
  ],
