--- a/Part4-tree_based_models/DAT158-Part4-3-Gradient_Boosting.ipynb
+++ b/Part4-tree_based_models/DAT158-Part4-3-Gradient_Boosting.ipynb
@@ -617,7 +617,9 @@
    "source": [
     "We'll focus on XGBoost. \n",
     "\n",
-    "We won't go into all the details about how XGBoost works. After you've gotten a basic idea of what XGBoost is, and played around with XGBoost on a few examples, you should consider reading  more about the method here:\n",
+    "We won't go into all the details about how XGBoost works. After we've gotten a basic idea of what XGBoost is, and played around with XGBoost on a few examples, we'll talk about a few more details. \n",
+    "\n",
+    "You should also consider reading  more about the method here:\n",
     "- http://blog.kaggle.com/2017/01/23/a-kaggle-master-explains-gradient-boosting\n",
     "- https://xgboost.readthedocs.io/en/latest/tutorials/model.html\n",
     "- https://www.analyticsvidhya.com/blog/2018/09/an-end-to-end-guide-to-understand-the-math-behind-xgboost\n",
