--- a/Part1-intro/DAT158-Part1-simple_examples.ipynb
+++ b/Part1-intro/DAT158-Part1-simple_examples.ipynb
@@ -1347,7 +1347,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Another example"
    ]
@@ -1355,7 +1357,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Data"
@@ -2288,14 +2291,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## Further study of diabetes"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "When using random forests it's possible to compute how much each feature influenced the predictions. The so-called **feature importance**. We'll learn more about this later. "
    ]
@@ -2303,7 +2311,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "importances = rf.feature_importances_"
@@ -2312,7 +2322,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -2333,7 +2345,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# Find index of those with highest importance, sorted from largest to smallest:\n",
@@ -2343,7 +2357,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2367,14 +2383,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "The glucose level has the largest explanatory value, followed by BMI and age. It's not hard to imagine that this kind of information is very useful in practice!"
+    "The glucose level has the largest explanatory value, followed by BMI and age. It's not hard to imagine that this kind of information is very useful in practice! However, it is something that must be used carefully, as the feature importances from a single model can be quite misleading. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> **Your turn!**\n",
     "- Get the feature importances for the Iris predictions. Is it sepal length or width that provides the most information?\n",
